--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.5",
     "next": "14.2.5",
+    "openai": "^4.55.4",
     "react": "^18",
     "react-dom": "^18"
   },
